--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,11 +6,12 @@
     <title>BrowserChannel</title>
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     <link rel="stylesheet" href="css/default.css" media="screen" />
   </head>
   <body>
+    <div id="board"></div>
     <div id="room">
     </div>
     <div id="type-bar">
@@ -22,6 +23,9 @@
       Written by: Gijs Stuurman
       / <a href="http://twitter.com/thegeez">@thegeez</a>
       / <a href="http://thegeez.github.com">Blog</a> / <a href="https://github.com/thegeez">GitHub</a></div>
+    <script src="js/three.min.js"></script>
+    <script src="js/OrbitControls.js"></script>
+    <script src="js/board.js"></script>
     <script type="text/javascript" src="js/bc.js"></script>
     <script type="text/javascript">
       bc.core.run();
